--- a/Parameters.yaml
+++ b/Parameters.yaml
@@ -1,6 +1,6 @@
 # Simulation Parameters
 
-no_agents : 40
+no_agents : 3
 time_units : 250
 
 # Environment Parameters
@@ -12,10 +12,10 @@ danger_reduce : 1
 
 env_max_danger : 1
 env_max_resource : 1
-env_max_resource_gen_rate : 0.3
+env_max_resource_gen_rate : 0.1
 
-monolith_motivation : 10
-monolith_spawn_chance : 0.1
+monolith_motivation : 100
+monolith_spawn_chance : 0.05
 
 # Agent Parameters
 
@@ -23,18 +23,24 @@ res_to_invent : 1
 invent_to_energy : 1
 
 ag_max_step : 3
-ag_max_interact_dist : 60
+ag_max_interact_dist : 30
 
-ag_basic_needs : 0.1
-ag_move_needs : 0.2
+ag_basic_needs : 0.2 
+ag_move_needs : 0.5
 
 invent_fract : 0.5
 
 ag_random_death : 0.001
-ag_sight : 70
+ag_sight : 70 # space units
 ag_max_invent : 2
 
 training_batch : 15
 training_skip_steps : 5
 
-ag_mating_score : 0.6
+colab_bonus : 1 # (0...1)
+
+# Mating parameters
+
+ag_mating_score : 0.5 # (0...1), higher means agents have to have higher acquintance score to mate
+ag_blood_relation_thresh : 0.5  # (0...1), higher means closer relativity
+ag_compatibility_thresh : 0.5
